--- a/views/index.html
+++ b/views/index.html
@@ -7,9 +7,12 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
 
 
-    <!-- Load Leaflet: http://leafletjs.com/ -->
+    <!-- Load Leaflet: http://leafletjs.com/ 
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.2.0/dist/leaflet.css" integrity="sha512-M2wvCLH6DSRazYeZRIm1JnYyh22purTM+FDB5CsyxtQJYeKq83arPe5wgbNmcFXGqiSH2XR8dT/fJISVA1r/zQ==" crossorigin="" />
     <script src="https://unpkg.com/leaflet@1.2.0/dist/leaflet.js" integrity="sha512-lInM/apFSqyy1o6s89K4iQUKg6ppXEgsVxT35HbzUupEVRh2Eu9Wdl4tHj7dZO0s1uvplcYGmt3498TtHq+log==" crossorigin=""></script>
+-->
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css" integrity="sha512-xodZBNTC5n17Xt2atTPuE1HxjVMSvLVW9ocqUKLsCC5CXdbqCmblAshOMAS6/keqq/sMZMZ19scR4PsZChSR7A==" crossorigin=""/>
+    <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js" integrity="sha512-XQoYMqMTK8LvdxXYG3nZ448hOEQiglfqkJs1NOQV44cWnUrBc8PkAOcXy20w0vlaXaVUearIOBhiXZ5V3ynxwA==" crossorigin=""></script>
 
     <!-- Esri Leaflet Plugin: https://esri.github.io/esri-leaflet/ -->
     <script src="https://unpkg.com/esri-leaflet@2.1.3/dist/esri-leaflet.js" integrity="sha512-pijLQd2FbV/7+Jwa86Mk3ACxnasfIMzJRrIlVQsuPKPCfUBCDMDUoLiBQRg7dAQY6D1rkmCcR8286hVTn/wlIg==" crossorigin=""></script>
@@ -58,11 +61,221 @@
           <input id="layer-input" type="text" diabled=true name="layers" value=""> <br/>
           <button id="loadButton" type="button" name="button">Re Load tiles</button>
         </div>
-        <div class="col-9" id="my-map" style="height:600px;"></div>
+        <div class="col-9" id="my-map" style="height:100vh; width: 100vw;"></div>
       </div>
     </div>
-    <script src="/demo/static/js/leaflet-src.js"></script>
+    <!--<script src="/demo/static/js/leaflet-src.js"></script>
     <script src="/demo/static/js/leaflet-providers.js"></script>
-    <script src="/demo/static/js/script.js"></script>
+    <script src="/demo/static/js/script.js"></script> -->
+    <script>
+       function getLayers () {
+          return document.getElementById('layer-input').value
+        }
+
+
+        const loaded = new Promise((resolve, reject) => window.addEventListener('load', event => resolve(event)))
+
+        const makeSelectOption = ({name, title}) => {
+          let option = document.createElement('option')
+          option.value = name 
+          option.innerHTML = title
+          return option
+        }
+        const zoomedOrMoved = (map, cb) => {
+          map.on('zoomend', cb)
+          map.on('moveend', cb)
+        }
+
+        function setMapViewFromUrl(map, url) {
+          const lat = url.searchParams.get('lat') || 10
+          const lng = url.searchParams.get('lng') || -84
+          const zoomlevel = url.searchParams.get('z') || 8
+          return map.setView(L.latLng(lat, lng), zoomlevel)
+        }
+
+
+        var globalLayers = [];
+
+        loaded
+        .then(_ => xhrGET('/geoserver/wms?service=wms&request=GetCapabilities&version=1.3.0'))
+        .then(result => {
+          const layers = result.responseXML.querySelectorAll("Layer[queryable=\"1\"]")
+          let model = []
+          layers.forEach(node => {
+            model.push({
+              title: node.querySelector('Title').innerHTML,
+              name: node.querySelector('Name').innerHTML
+            })
+          })
+          globalLayers = model;
+          return model 
+        }).then(optionModels => {
+          // set all options from our loaded geoserver layers
+          const layerSelection = document.getElementById("layers-selection")
+          optionModels
+            .map(makeSelectOption)
+            .forEach(option => layerSelection.appendChild(option))
+          layerSelection.setAttribute('size', optionModels.length)
+
+          layerSelection.addEventListener('change', e => {
+            // get just selected nodes
+            let selected = []
+            e.srcElement.childNodes.forEach(n => n.selected ? selected.push(n.value): noOp())
+            document.getElementById('layer-input').value = selected.join(',')
+          })
+          
+          const loadButton = document.getElementById("loadButton")
+
+          const tileLayer = L.tileLayer.wms('/geoserver/wms', {
+            layers: getLayers(),
+            format: 'image/png',
+            opacity: 0.8,
+            transparent: 'true',
+            attribution: 'Sourced from LINZ. CC-BY 3.0'
+          })
+
+          const map = L.map('my-map', {
+            center: L.latLng(-36.85, 174.76),
+            zoom: 10,
+            continuousWorld: true,
+            worldCopyJump: false,
+          })
+
+          L.tileLayer.provider('OpenStreetMap').addTo(map);
+
+          setMapViewFromUrl(map, new URL(window.location.href))
+
+
+          const baseLayers = {
+            //'OpenStreetMap': defaultBase,
+            'USGS TNM': L.tileLayer.provider('USGSTNM'),
+            'ESRI Imagery': L.tileLayer.provider('Esri.WorldImagery'),
+            'ESRI Ocean Basemap': L.tileLayer.provider('Esri.OceanBasemap'),
+            'OSM Topo': L.tileLayer.provider('OpenTopoMap')
+          };
+
+
+        var options = {
+            transparent: 'true',
+            format: 'image/png',
+            opacity: 0.5,
+            tiled: 'true'
+            //info_format: 'text/html'
+        };
+        //Using a relative url to call layer instead of http
+        var source = L.WMS.source('http://geomapa.tk:8080/geoserver/costarica-snit/wms?', options);
+        var CantonesLayer = source.getLayer('costarica-snit:Cantones_de_Costa_Rica');
+        var DistritosLayer = source.getLayer('costarica-snit:Distritos_de_Costa_Rica');
+        var ProvinciasLayer = source.getLayer('costarica-snit:Provincias_de_Costa_Rica');
+           
+        var groupOverLays = {
+            "DTA": {
+                "Cantones": CantonesLayer,
+                "Distritos": DistritosLayer,
+                "Provincias": ProvinciasLayer,
+            },
+        };
+
+
+        const layer_list = {}
+
+        globalLayers.forEach((layer) => {
+            console.log(layer.title+": "+layer.name);
+        });
+
+          L.control.groupedLayers(baseLayers, groupOverLays).addTo(map);
+
+          zoomedOrMoved(map, e => {
+            const location = map.getCenter()
+            const zoomlevel = map.getZoom()
+            let url = new URL(window.location.href)
+            url.searchParams.set('z', zoomlevel)
+            url.searchParams.set('lat', location.lat)
+            url.searchParams.set('lng', location.lng)
+            
+            window.history.pushState({path: url.href}, '', url.href);
+          })
+
+          map.on('click', e => {
+            console.log('dat click in', e)
+            query(e.latlng.lat, e.latlng.lng)
+              .then(yo => {
+                console.log('got data for point', e.latlng, yo)
+              })
+              .catch(err => {
+                console.log('bad request', err)
+              })
+          })
+          map.addLayer(tileLayer)
+
+          loadButton.addEventListener('click', e => {
+            tileLayer.setParams({layers: getLayers()})
+          })
+          
+          window.addEventListener('popstate', e => {
+            const url = new URL(e.state.path)
+            setMapViewFromUrl(map, url)
+          })
+        })
+
+        // utillity
+        function xhr (method, url, body) {
+          var xhttp = new XMLHttpRequest()
+          return new Promise((resolve, reject) => {
+            xhttp.onreadystatechange = function() {
+              if (this.readyState == 4) {
+                if (this.status == 200) resolve(this)
+                else reject(this)
+              }
+            }
+            xhttp.open(method, url, true);
+            if (method === 'POST') {
+              xhttp.setRequestHeader("content-type", "application/xml")
+              xhttp.send(body)
+            } else {
+              xhttp.send()
+            }
+          })
+        }
+        function xhrGET (url) {
+          return xhr('GET', url)
+        }
+
+        function xhrPOST (url, body) {
+          return xhr('POST', url, body)
+        }
+            
+        function noOp () {}
+
+
+        function query (lat, lng) {
+          var bboxQuery = `
+          <wfs:GetFeature
+            xmlns:ogc="http://www.opengis.net/ogc"
+            xmlns:gml="http://www.opengis.net/gml"
+            xmlns:wfs="http://www.opengis.net/wfs"
+            service="WFS"
+            version="1.1.0"
+            maxFeatures="10"
+            outputFormat="text/xml; subtype=gml/3.1.1">
+            <wfs:Query
+              srsName="EPSG:4326" typeName="ersin-map:parcels-reprojected">
+              <ogc:Filter>
+                <ogc:BBOX>
+                  <ogc:PropertyName>shape</ogc:PropertyName>
+                  <gml:Envelope srsName="EPSG:4326">
+                    <gml:lowerCorner>${lng - 0.05} ${lat - 0.05}</gml:lowerCorner>
+                    <gml:upperCorner>${lng + 0.05}  ${lat + 0.05}</gml:upperCorner>
+                  </gml:Envelope>
+                </ogc:BBOX>
+              </ogc:Filter>
+            </wfs:Query>
+          </wfs:GetFeature>`
+          console.log(bboxQuery)
+          return xhrPOST("/geoserver/wfs", bboxQuery)
+        }
+
+    </script>
+
   </body>
 </html>
