--- a/views/index.html
+++ b/views/index.html
@@ -6,7 +6,7 @@
     <!-- <link rel="stylesheet" href="https://unpkg.com/leaflet@1.0.1/dist/leaflet.css" /> -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
 
-
+    
     <!-- Load Leaflet: http://leafletjs.com/ 
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.2.0/dist/leaflet.css" integrity="sha512-M2wvCLH6DSRazYeZRIm1JnYyh22purTM+FDB5CsyxtQJYeKq83arPe5wgbNmcFXGqiSH2XR8dT/fJISVA1r/zQ==" crossorigin="" />
     <script src="https://unpkg.com/leaflet@1.2.0/dist/leaflet.js" integrity="sha512-lInM/apFSqyy1o6s89K4iQUKg6ppXEgsVxT35HbzUupEVRh2Eu9Wdl4tHj7dZO0s1uvplcYGmt3498TtHq+log==" crossorigin=""></script>
@@ -30,7 +30,12 @@
     <script src="https://cdn.osmbuildings.org/OSMBuildings-Leaflet.js"></script>
 
     <!-- Load Font Awesome icons -->
-    <script src="https://use.fontawesome.com/a64989e3a8.js"></script>
+    <!--<script src="https://use.fontawesome.com/a64989e3a8.js"></script>-->
+    <script
+      src="https://use.fontawesome.com/releases/v5.15.3/js/all.js"
+      data-auto-a11y="true"
+    ></script>
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.3/css/all.css" integrity="sha384-SZXxX4whJ79/gErwcOYf+zWLeJdY/qpuqC4cAa9rOGUstPomtqpuNWT9wdPEn2fk" crossorigin="anonymous">
 
     <!-- Grouped Layer Plugin: https://github.com/ismyrnow/leaflet-groupedlayercontrol  -->
     <link rel="stylesheet" href="/demo/static/css/leaflet.groupedlayercontrol.min.css">
@@ -56,12 +61,12 @@
   <body>
     <div class="container-fluid">
       <div class="row">
-        <div class="col-2" id="controls">
+        <!-- <div class="col-2" id="controls">
           <select name="layer-options" id="layers-selection" multiple></select>
           <input id="layer-input" type="text" diabled=true name="layers" value=""> <br/>
           <button id="loadButton" type="button" name="button">Re Load tiles</button>
-        </div> 
-        <div class="col-10" id="my-map" style="height:100vh; width: 100vw;"></div>
+        </div> -->
+        <div class="col-12" id="my-map" style="height:100vh; width: 100vw;"></div>
       </div>
     </div>
     <!--<script src="/demo/static/js/leaflet-src.js"></script>
@@ -70,7 +75,7 @@
     <script>
        
        function getLayers () {
-          return document.getElementById('layer-input').value
+          //return document.getElementById('layer-input').value
         }
 
 
@@ -114,21 +119,23 @@
           return model 
         }).then(optionModels => {
           // set all options from our loaded geoserver layers
-          const layerSelection = document.getElementById("layers-selection")
-          optionModels
-            .map(makeSelectOption)
-            .forEach(option => layerSelection.appendChild(option))
-          layerSelection.setAttribute('size', optionModels.length)
-
-          layerSelection.addEventListener('change', e => {
-            // get just selected nodes
-            let selected = []
-            e.srcElement.childNodes.forEach(n => n.selected ? selected.push(n.value): noOp())
-            document.getElementById('layer-input').value = selected.join(',')
-          })
           
-          const loadButton = document.getElementById("loadButton")
+                    
+          //const layerSelection = document.getElementById("layers-selection")
+          //optionModels
+          //  .map(makeSelectOption)
+          //  .forEach(option => layerSelection.appendChild(option))
+          //layerSelection.setAttribute('size', optionModels.length)
+          //layerSelection.addEventListener('change', e => {
+            // get just selected nodes
+            //let selected = []
+            //e.srcElement.childNodes.forEach(n => n.selected ? selected.push(n.value): noOp())
+            //document.getElementById('layer-input').value = selected.join(',')
+          //})
+          
+          //const loadButton = document.getElementById("loadButton") 
 
+          
           const tileLayer = L.tileLayer.wms('/geoserver/wms', {
             layers: getLayers(),
             format: 'image/png',
@@ -218,9 +225,9 @@
           })
           map.addLayer(tileLayer)
 
-          loadButton.addEventListener('click', e => {
-            tileLayer.setParams({layers: getLayers()})
-          })
+          //loadButton.addEventListener('click', e => {
+          //  tileLayer.setParams({layers: getLayers()})
+          // })
           
           window.addEventListener('popstate', e => {
             const url = new URL(e.state.path)
