Arreglos con el MiniMap y Tools

--- a/views/index.html
+++ b/views/index.html
@@ -181,7 +181,7 @@
         
            
         var groupOverLays = {
-            "DTA": {
+            "Ceniga": {
                      
             },
         };
@@ -190,7 +190,7 @@
 
         globalLayers.forEach((layer) => {
             
-            groupOverLays.DTA[`${layer.title}`]= source.getLayer(`${ layer.name }`)
+            groupOverLays.Ceniga[`${layer.title}`]= source.getLayer(`${ layer.name }`)
                      
             //Object.defineProperty(layer_list.DTA,`${layer.title}`,{value: source2.getLayer(`${ layer.name }`)})
         });
