Falta Creditos GEOINN/Rokbit

--- a/views/index.html
+++ b/views/index.html
@@ -232,7 +232,7 @@
         //Logo position: bottomright
         var credctrl = L.controlCredits({
             image: "/demo/static/Images/opengislab_106x23.png",
-            link: "https://www.opengislab.com/",
+            link: "https://www.geoinn.com/",
             text: "Leaflet map example by Stephanie @ <u>opengislab.com<u/>"
         }).addTo(map);
 
