Falta arreglar MENU Navbar MINAE

--- a/views/index.html
+++ b/views/index.html
@@ -59,17 +59,49 @@
     <link rel="stylesheet" href="/demo/static/css/style.css">
   </head>
   <body>
+      <div class="navbar">
+        <div class="logos">
+            <div class="logo-box">
+                <img class="logo icon-geo" src="/demo/static/Images/GEOvisorCENIGA2AMB.png" alt="icon"/>
+                <img class="logo icon-minae" src="/demo/static/Images/MINAE-BlancoVF.png" alt="icon"/>
+                <img class="logo icon-ceniga" src="/demo/static/Images/CENIGA_LogoBlanco.png" alt="icon"/>
+            </div>
+        </div>
+        <!--
+        <div class="meta-bar">
+            <div style="align-self: center;">
+                Latitud: <input type="text" name="lat" id="lat"/>
+                Longitud: <input type="text" name="lng" id="lng"/>
+                <input id="button-play" type="button" value="IR"/>
+            </div>
+            <a href="http://3.12.93.52:8080/geonetwork" class="metadatos-link">
+                <h2>Metadatos</h2>
+            </a>
+        </div>
+        -->
+    
+    
+    </div>
     <div class="container-fluid">
       <div class="row">
+
+      
         <!-- <div class="col-2" id="controls">
           <select name="layer-options" id="layers-selection" multiple></select>
           <input id="layer-input" type="text" diabled=true name="layers" value=""> <br/>
           <button id="loadButton" type="button" name="button">Re Load tiles</button>
         </div> -->
-        <div class="col-12" id="my-map" style="height:100vh; width: 100vw;"></div>
+
+        
+
+
+        <div class="col-12" id="my-map" style="height:90vh; width: 100vw;"" ></div>
       </div>
     </div>
-    <!--<script src="/demo/static/js/leaflet-src.js"></script>
+    <!--
+      
+
+    <script src="/demo/static/js/leaflet-src.js"></script>
     <script src="/demo/static/js/leaflet-providers.js"></script>
     <script src="/demo/static/js/script.js"></script> -->
     <script>
