--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,3 +1,25 @@
+html { 
+  width: 100%;
+  height: 100%; 
+  margin: 0; 
+  padding: 0;
+}
+
+body {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  height: 100%;
+  margin: 0;
+  padding: 0;
+}
+
+#map { 
+  width: 100%; 
+  height: 100%; 
+}
+
+
 #layer-input {
   width: 100%;
 } 
@@ -11,4 +33,46 @@
 
 .imagen-geoinn{
   width: 200;
+}
+
+.navbar {
+  width: 100%;
+}
+
+.meta-bar {
+    background-color: #ccc;
+    margin: 0;
+
+}
+
+.logos {
+    display: flex;
+    background-color: #2b6e99;
+}
+
+.logo-box {
+    padding: 0px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
+.logo {
+    width: 10%;
+    align-self: center;
+}
+
+.meta-bar {
+    display: flex;
+    justify-content: space-between;
+}
+
+.metadatos-link {
+    text-decoration: none;
+    color: black;
+}
+
+.metadatos-link h2 {
+    margin: 0;
+    padding: 5px;
 }
