--- a/views/index.html
+++ b/views/index.html
@@ -207,8 +207,10 @@
         };
         //Using a relative url to call layer instead of http
         
+
             
-        var source = L.WMS.source('http://18.218.14.134:8080/geoserver/wms?', options);
+        //var source = L.WMS.source('http://18.218.14.134:8080/geoserver/wms?', options);
+          var source = L.WMS.source('http://geomapa.tk:8080/geoserver/wms?', options);
 
         //
         
