Geoserver CENIGA working again

--- a/views/index.html
+++ b/views/index.html
@@ -209,8 +209,8 @@
         
 
             
-        //var source = L.WMS.source('http://18.218.14.134:8080/geoserver/wms?', options);
-          var source = L.WMS.source('http://geomapa.tk:8080/geoserver/wms?', options);
+        var source = L.WMS.source('http://18.218.14.134:8080/geoserver/wms?', options);
+       //var source = L.WMS.source('http://geomapa.tk:8080/geoserver/wms?', options);
 
         //
         
